minor tweak to manage page, remove prints from service.py

--- a/templates/g/manage.html
+++ b/templates/g/manage.html
@@ -1,1 +1,5 @@
-manage page for g
+{% extends "layout.html" %}
+{% block title %}g: MIT's link shortener{% endblock %}
+{% block content %}
+  <h1>g/: Add a URL</h1>
+{% endblock %}
