--- a/templates/g/home.html
+++ b/templates/g/home.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}g: MIT's link shortener{% endblock %}
 {% block content %}
-  <h1>g.mit.edu</h1>
-  <p>g.mit.edu is a link shortening service, similar to <a
+  <h1>g/</h1>
+  <p>g/ (g.mit.edu) is a link shortening service, similar to <a
   href="http://bit.ly">bit.ly</a>, made available to the MIT community (and
   anyone who clicks its links).</p>
   <p>If you're on campus, you can use <a href="http://g/">g/</a> instead of the
