docstrings for views and default post action for manageview

--- a/templates/g/home.html
+++ b/templates/g/home.html
@@ -5,6 +5,7 @@
   <p>g/ (g.mit.edu) is a link shortening service, similar to <a
   href="http://bit.ly">bit.ly</a>, made available to the MIT community (and
   anyone who clicks its links).</p>
+  <p>Want to add your own link? Visit <a href="manage">g/manage</a>.
   <p>If you're on campus, you can use <a href="http://g/">g/</a> instead of the
   full URL. This will let you use very short links like <a
   href="http://g/about">g/about</a> instead.</p>
