--- a/templates/g/manage.html
+++ b/templates/g/manage.html
@@ -2,4 +2,9 @@
 {% block title %}g: MIT's link shortener{% endblock %}
 {% block content %}
   <h1>g/: Add a URL</h1>
+  <form action="" method="POST">
+    <input type="text" name="identifier" />
+    <input type="text" name="url" />
+    <input type="submit" />
+  </form>
 {% endblock %}
