--- a/jump/templates/404.html
+++ b/jump/templates/404.html
@@ -1,1 +1,7 @@
-404 not found
+{% extends "layout.html" %}
+{% block title %}Page Not Found{% endblock %}
+{% block content %}
+  <h1>Page Not Found</h1>
+  <p>The page you were looking for was not found:</p>
+  <p>{{ request.url }}</p>
+{% endblock %}
