Read Athena from request environ

--- a/jump/templates/g/manage.html
+++ b/jump/templates/g/manage.html
@@ -5,6 +5,8 @@
   <p>Enter the URL to be shortened below. If you'd like something other
   than a random series of letters (e.g. g/short-name), enter a short
   name as well.</p>
+  <p>Note: to protect against spam and to resolve link disputes, your athena
+  (<strong>{{ athena }}</strong>) will be recorded with the link.</p>
   {% if error %}
     <p class="error">{{ error }}</p>
   {% endif %}
