--- a/jump/templates/g/manage.html
+++ b/jump/templates/g/manage.html
@@ -12,7 +12,7 @@
   {% endif %}
   <form action="" method="POST">
     <input type="text" name="url" placeholder="URL" />
-    <input type="text" name="identifier" placeholder="Short name" />
+    <input type="text" name="short_name" placeholder="Short name" />
     <input type="submit" />
   </form>
 {% endblock %}
